# Harry_Potter

./: Analysis_Result_Hayoung.csv  README.md  app1.py  appH.py
app/: Analysis_Result_Hayoung.csv  README.md  Tokenization.py  app1.py  appH.py  appH2.py  appj.py  apps.py  main.py  pyproject.toml  sooah.py  test1.md
data/: noun_result.txt  rule_family_house_result.txt
results/: 규칙_단어_불용어삭제.txt  단어_토큰화.txt  명사_단어_토큰화.txt  문장_토큰화.txt
