[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-sm",
    "konlpy>=0.6.0",
    "kss>=6.0.6",
    "nltk>=3.9.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.14",
    "tensorflow>=2.21.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
